--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -2,5 +2,6 @@
 deployment:
   tasks:
     - export DEPLOYPATH=/home/landerwe/portfolio.dantechwebdesign.com/repositories/photon
+     - /bin/cp index.html $DEPLOYPATH
     - /bin/cp -R * $DEPLOYPATH
     
